[metadata]
name = autocut_fix
version = 0.0.1
license = Apache Software License
description = Cut video by subtitles，修复whisper依赖为openai-whisper
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
