[metadata]
name = autocut
version = 0.0.1
license = Apache Software License
description = 按字幕剪切视频，本项目更换原项目whisper依赖为openai-whisper
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
