[metadata]
name = autocut_fix
version = 0.0.2
license = Apache Software License
description = Cut the video by subtitle. This project changes the whisper dependency of the original project to openai-whisper.
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
